crates/rlf-macros/tests/fail/shadowing.rs
use rlf::rlf;

rlf! {
    card = "card";
    bad($card) = "uses {$card}";
}

fn main() {}
