crates/rlf-macros/tests/fail/shadowing.stderr
error: parameter 'card' shadows phrase 'card'
       help: use a different parameter name
 --> tests/fail/shadowing.rs:5:10
  |
5 |     bad($card) = "uses {$card}";
  |          ^^^^
